definitions/deployment-original/deployment.yml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: goop-wildfly
    name: goop-wildfly-dc
  spec:
    replicas: 1
    selector:
      deploymentconfig: goop-wildfly-dc
    template:
      metadata:
        labels:
          app: goop-wildfly
          deploymentconfig: goop-wildfly-dc
      spec:
        containers:
        - image: goop-wildfly
          name: goop-wildfly
          ports:
          - containerPort: 8080
            protocol: TCP
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - goop-wildfly
        from:
          kind: ImageStreamTag
          name: goop-wildfly:latest
      type: ImageChange
    - type: ConfigChange
